[package]
name = "extapi-acsys"
version = "0.5.0"
edition = "2024"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dependencies]
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
chrono = "0.4.44"
futures = "0.3.27"
futures-util = { version = "0.3", features = ["tokio-io"] }
http = "1"
kafkang = "0.2.0"
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "rustls-tls-webpki-roots", "json"] }
rustls = { version = "0.23.37", features = ["ring"] }
rust-env-var-lib = { git = "https://github.com/fermi-ad/rust-env-var-lib", tag = "v1.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.18"
tonic = "0.14"
tonic-prost = "0.14"
tower-http = { version = "0.6", features = ["cors", "compression-deflate", "decompression-deflate"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
tower = "0.5"

[profile.release]
incremental = false
opt-level = 3
lto = true

[profile.dev]
incremental = false
debug = 1
opt-level = 2
lto = false

[lints.clippy]
enum_variant_names = "allow"
