[package]
name = "extapi-acsys"
version = "0.6.0"
edition = "2024"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dependencies]
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.27"
futures-util = { version = "0.3", features = ["tokio-io"] }
http = "1"
prost = "0.14"
rdkafka = { version = "0.39.0", features = ["cmake-build", "gssapi", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "rustls-tls-webpki-roots", "json"] }
rustls = { version = "0.23.40", features = ["ring"] }
rust-env-var-lib = { git = "https://github.com/fermi-ad/rust-env-var-lib", tag = "v1.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7.18"
tonic = "0.14"
tonic-prost = "0.14"
tower-http = { version = "0.6", features = ["cors", "compression-deflate", "decompression-deflate"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tower = "0.5"

[profile.release]
incremental = false
opt-level = 3
lto = true

[profile.dev]
incremental = false
debug = 1
opt-level = 2
lto = false

[lints.clippy]
enum_variant_names = "allow"
